--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.45.4",
     "react-i18next": "^13.1.2",
     "react-native": "0.72.4",
+    "react-native-bootsplash": "^5.2.2",
     "react-native-config": "^1.5.1",
     "react-native-easy-toast": "^2.3.0",
     "react-native-fast-image": "^8.6.3",
