--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,7 +89,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        resValue "string", "build_config_package", "com.awesomeproject"
+        resValue "string", "build_config_package", "com.troove.troove_app"
     }
     signingConfigs {
         debug {
@@ -124,12 +124,12 @@ android {
     productFlavors {
         dev {
             dimension "enviroment"
-            resValue 'string', 'app_name',  'Awesome'
-            applicationIdSuffix ".develop"
+            resValue 'string', 'app_name',  '[DEV]Troove'
+            applicationIdSuffix ""
         }
         stg {
             dimension "enviroment"
-            resValue 'string', 'app_name',  'Awesome'
+            resValue 'string', 'app_name',  '[STG]Troove'
             applicationIdSuffix ".staging"
         }
     }
