--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,7 +27,10 @@ end
 
 
 # Firebase
+# use_frameworks! :linkage => :static
+# Firebase
 pod 'GoogleUtilities', :modular_headers => true
+pod 'FirebaseCore', :modular_headers => true
 
 target 'AwesomeProject' do
   config = use_native_modules!
