--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
 MODE=DEV
 API_URL=https://jointly-full-ghoul.ngrok-free.app/api
+
+# FIREBASE in google service
+GOOGLE_CLIENT_ID='527645071665-2eqr8u8nb3rhjpe55p99kll6j0lk7ab6.apps.googleusercontent.com'
