--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
-
+apply plugin: 'com.google.gms.google-services'
 
 project.ext.envConfigFiles = [
   debug: ".env.development",
@@ -82,9 +82,10 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+    // Do need to change the namespace of android project
     namespace "com.awesomeproject"
     defaultConfig {
-        applicationId "com.awesomeproject"
+        applicationId "com.troove.troove_app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
