--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native start --reset-cache && react-native run-android --mode=devDebug --appId 'com.awesomeproject.develop'",
-    "android:stg": "react-native start --reset-cache &&  react-native run-android --mode=stgDebug  --appId 'com.awesomeproject.staging'",
+    "android": "react-native start --reset-cache && react-native run-android --mode=devDebug --appId 'com.troove.troove_app'",
+    "android:stg": "react-native start --reset-cache &&  react-native run-android --mode=stgDebug  --appId 'com.troove.troove_app.staging'",
     "ios": "react-native start --reset-cache && react-native run-ios --scheme 'AwesomeProject'",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
@@ -16,6 +16,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
