feat: google auth

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 MODE=DEV
-API_URL=https://jointly-full-ghoul.ngrok-free.app/api
+API_URL=https://troove-dev-385107.uc.r.appspot.com/api/v1
 
 # FIREBASE in google service
 GOOGLE_CLIENT_ID='527645071665-2eqr8u8nb3rhjpe55p99kll6j0lk7ab6.apps.googleusercontent.com'
