--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react-hook-form": "^7.45.4",
     "react-i18next": "^13.1.2",
     "react-native": "0.72.4",
+    "react-native-autoheight-webview": "^1.6.5",
     "react-native-bootsplash": "^5.2.2",
     "react-native-config": "^1.5.1",
     "react-native-easy-toast": "^2.3.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.5.8",
@@ -47,6 +49,7 @@
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-version-number": "^0.3.6",
+    "react-native-webview": "^13.6.4",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0"
   },
