--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native start --reset-cache && react-native run-android --mode=devDebug --appId 'com.troove.troove_app'",
-    "android:stg": "react-native start --reset-cache &&  react-native run-android --mode=stgDebug  --appId 'com.troove.troove_app.staging'",
-    "ios": "react-native start --reset-cache && react-native run-ios --scheme 'AwesomeProject'",
+    "android": "react-native run-android --mode=devDebug --appId 'com.troove.troove_app'",
+    "android:stg": "react-native run-android --mode=stgDebug  --appId 'com.troove.troove_app.staging'",
+    "ios": "react-native run-ios --scheme 'AwesomeProject'",
+    "reset": "react-native start --reset-cache",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
     "test": "jest"
@@ -16,6 +17,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/firestore": "^18.8.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.7",
@@ -36,17 +38,19 @@
     "react-native-config": "^1.5.1",
     "react-native-easy-toast": "^2.3.0",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.5.8",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-network-logger": "^1.15.0",
+    "react-native-reanimated": "^3.6.2",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.14.0",
+    "react-native-ui-lib": "^7.15.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-version-number": "^0.3.6",
     "react-native-webview": "^13.6.4",
