--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-network-logger": "^1.15.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "^4.7.1",
