--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.5.8",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-mmkv": "^2.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-network-logger": "^1.15.0",
