--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "pod": "cd ios && pod install && cd ..",
     "android": "react-native run-android --mode=devDebug --appId 'com.troove.troove_app'",
     "android:stg": "react-native run-android --mode=stgDebug  --appId 'com.troove.troove_app.staging'",
     "ios": "react-native run-ios --scheme 'AwesomeProject'",
