--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
@@ -37,7 +38,9 @@
     "react-native-autoheight-webview": "^1.6.5",
     "react-native-bootsplash": "^5.2.2",
     "react-native-config": "^1.5.1",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-easy-toast": "^2.3.0",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-inappbrowser-reborn": "^3.7.0",
