--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-bootsplash": "^5.2.2",
     "react-native-config": "^1.5.1",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-date-picker": "^4.3.6",
     "react-native-easy-toast": "^2.3.0",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-fast-image": "^8.6.3",
@@ -58,6 +59,7 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.14.0",
+    "react-native-ui-datepicker": "^2.0.0",
     "react-native-ui-lib": "^7.15.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-version-number": "^0.3.6",
