Image picker work (#27)
* work on profile and feedback

* Work on Profile page

* user slice changes

* Work on profile updation

* work on profile

* time format change

* used Utils

* changes

* work on edit profile screen

* Work on design on profile

* Added new date picker and styling

* worked on date picker and styling profile

* changes in profile color condition

* image libraries setup

* Upload Image done in android

* Work on ui on edit page

* rectifying issues in ios for modal opening

* Enum create, console and package remove

* svg added on upload modal

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,6 +91,7 @@ android {
         versionCode 1
         versionName "1.0"
         resValue "string", "build_config_package", "com.troove.troove_app"
+        vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         debug {
