--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <uses-permission android:name="android.permission.INTERNET" package="com.troove.troove_app" />
+  <uses-permission android:name="android.permission.CAMERA" package="com.troove.troove_app" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" package="com.troove.troove_app" />
+  <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" package="com.troove.troove_app" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" package="com.troove.troove_app" />
+  <uses-feature android:name="android.hardware.camera" android:required="false" package="com.troove.troove_app" />
+  <uses-feature android:name="android.hardware.camera.front" android:required="false" package="com.troove.troove_app" />
 
   <application
     android:name=".MainApplication"
