--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
     "@react-native-firebase/firestore": "^18.8.0",
+    "@react-native-firebase/storage": "^18.8.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.7",
@@ -44,6 +45,7 @@
     "react-native-element-dropdown": "^2.10.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-image-crop-picker": "^0.40.3",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -53,6 +55,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-network-logger": "^1.15.0",
+    "react-native-permissions": "^4.1.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-root-siblings": "^4.1.1",
