remove redundant permission

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,7 +24,7 @@ setup_permissions([
   # 'LocationAccuracy',
   # 'LocationAlways',
   # 'LocationWhenInUse',
-  'MediaLibrary',
+  # 'MediaLibrary',
   # 'Microphone',
   # 'Motion',
   # 'Notifications',
