--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "reset": "react-native start --reset-cache",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
@@ -32,6 +33,8 @@
     "i18next": "^23.4.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-i18next": "^13.1.2",
