--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.4.0",
     "i18next": "^23.4.4",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^6.6.0",
     "moment": "^2.29.4",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
