--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,11 @@
 MODE=DEV
 API_URL=https://troove-dev-385107.uc.r.appspot.com/api/v1
-LOCAL_STORAGE_VERSION='1'
 
 # FIREBASE in google service
-GOOGLE_CLIENT_ID='527645071665-2eqr8u8nb3rhjpe55p99kll6j0lk7ab6.apps.googleusercontent.com'
+FIREBASE_PROJECT_ID='troove-dev'
+FIREBASE_API_KEY='AIzaSyAnDPFgDWxqTI7M-dA6BWSlSFrFJr_E5Qw'
+FIREBASE_APP_ID='1:527645071665:android:fda65edbcaf1f7a98d3810'
+FIREBASE_STORAGE_BUCKET='troove-dev.appspot.com'
+FIREBASE_CLIENT_ID='527645071665-2eqr8u8nb3rhjpe55p99kll6j0lk7ab6.apps.googleusercontent.com'
+FIREBASE_ANDROID_CLIENT_ID='527645071665-2eqr8u8nb3rhjpe55p99kll6j0lk7ab6.apps.googleusercontent.com'
+FIREBASE_IOS_CLIENT_ID='527645071665-8kag2l8pmv2pm9iirpl5371b80mstd7f.apps.googleusercontent.com'
