--- a/ios/AwesomeProject/Info-Staging.plist
+++ b/ios/AwesomeProject/Info-Staging.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Troove</string>
+	<string>Troove STG</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
