--- a/ios/Podfile
+++ b/ios/Podfile
@@ -45,7 +45,6 @@ setup_permissions([
 #     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
 # ```
 # flipper_config = ENV['NO_FLIPPER'] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
-flipper_config = FlipperConfiguration.disabled
 
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
@@ -60,9 +59,9 @@ use_frameworks! :linkage => :static
 pod 'GoogleUtilities', :modular_headers => true
 pod 'FirebaseCore', :modular_headers => true
 
-target 'AwesomeProject' do
+def share_pods
   config = use_native_modules!
-
+  flipper_config = FlipperConfiguration.disabled
   # Flags change depending on the env values.
   flags = get_default_flags()
 
@@ -79,19 +78,23 @@ target 'AwesomeProject' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+end
+
+target 'AwesomeProject' do
+  share_pods
 
   target 'AwesomeProjectTests' do
     inherit! :complete
     # Pods for testing
   end
+end
 
-  post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
-    react_native_post_install(
-      installer,
-      config[:reactNativePath],
-      :mac_catalyst_enabled => false
-    )
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
-  end
+target 'AwesomeProject Staging' do
+  share_pods
+end
+
+post_install do |installer|
+  # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
+  react_native_post_install(installer)
+  __apply_Xcode_12_5_M1_post_install_workaround(installer)
 end
