--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "pod": "cd ios && pod install && cd ..",
     "android": "react-native run-android --mode=devDebug --appId 'com.troove.troove_app'",
-    "android:stg": "react-native run-android --mode=stgDebug  --appId 'com.troove.troove_app.staging'",
+    "android:stg": "react-native run-android --mode=stgDebug  --appId 'com.troove.troove_app.staging_dev'",
     "ios": "react-native run-ios --scheme 'AwesomeProject'",
+    "ios:stg": "react-native run-ios --scheme 'AwesomeProject-Staging'",
     "ios_si": "react-native run-ios --scheme 'AwesomeProject' --simulator='iPhone 15'",
     "reset": "react-native start --reset-cache",
     "lint": "eslint .",
