--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/crashlytics": "^19.0.0",
     "@react-native-firebase/firestore": "^18.8.0",
     "@react-native-firebase/storage": "^18.8.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
