--- a/assets/bootsplash_manifest.json
+++ b/assets/bootsplash_manifest.json
@@ -1,7 +1,7 @@
 {
-  "background": "#9A32EB",
+  "background": "#FFFFFF",
   "logo": {
-    "width": 120,
-    "height": 184
+    "width": 148,
+    "height": 129
   }
 }
