--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-native-clipboard/clipboard": "^1.11.2",
-    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
@@ -41,10 +40,8 @@
     "react-i18next": "^13.1.2",
     "react-native": "0.72.4",
     "react-native-autoheight-webview": "^1.6.5",
-    "react-native-bootsplash": "^5.2.2",
+    "react-native-bootsplash": "5.1.2",
     "react-native-config": "^1.5.1",
-    "react-native-country-picker-modal": "^2.0.0",
-    "react-native-date-picker": "^4.3.6",
     "react-native-easy-toast": "^2.3.0",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-fast-image": "^8.6.3",
@@ -53,8 +50,6 @@
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-linear-gradient": "^2.8.2",
-    "react-native-mmkv": "^2.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-network-logger": "^1.15.0",
@@ -65,14 +60,12 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.14.0",
-    "react-native-ui-datepicker": "^2.0.0",
     "react-native-ui-lib": "^7.15.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-version-number": "^0.3.6",
     "react-native-webview": "^13.6.4",
     "react-redux": "^8.1.2",
-    "redux-persist": "^6.0.0",
-    "string-to-color": "^2.2.2"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
