--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "pod": "cd ios && pod install && cd ..",
-    "android": "react-native run-android --mode=devDebug --appId 'com.troove.troove_app'",
-    "android:stg": "react-native run-android --mode=stgDebug  --appId 'com.troove.troove_app.staging_dev'",
+    "android": "react-native run-android --mode=devDebug --appId 'com.companyWE.companyWEApp'",
+    "android:stg": "react-native run-android --mode=stgDebug  --appId 'com.companyWE.companyWEApp'",
     "ios": "react-native run-ios --scheme 'companyWE' --simulator \"iPhone 14 Pro\"",
     "ios:stg": "react-native run-ios --scheme 'companyWE-Staging'",
     "ios_si": "react-native run-ios --scheme 'companyWE' --simulator='iPhone 15'",
@@ -34,7 +34,7 @@
     "i18next": "^23.4.4",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.6.0",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
