--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-collapsible-tab-view": "^6.2.1",
     "react-native-config": "^1.5.1",
     "react-native-date-picker": "^4.4.0",
+    "react-native-device-info": "^10.13.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-easy-toast": "^2.3.0",
     "react-native-element-dropdown": "^2.10.1",
