--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.72.4",
     "react-native-autoheight-webview": "^1.6.5",
     "react-native-bootsplash": "5.1.2",
+    "react-native-calendars": "^1.1304.1",
     "react-native-collapsible": "^1.6.1",
     "react-native-collapsible-tab-view": "^6.2.1",
     "react-native-config": "^1.5.1",
